# agent-bridge

./: .dockerignore  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml
docs/: http-instructions.md  protocol.md
examples/: bootstrap_prompt.md  quickstart_local.md  two_agents_demo.sh
src/agent_bridge/: __init__.py  cli.py  core.py  protocol.json  server.py
tests/: test_core.py  test_replay_stats.py  test_server.py
